added DFG acknowledgements

--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -326,6 +326,8 @@ Capacitive proximity sensors represent a suitable new input modality for future 
 
 We would like to thank our evaluation participants from the Technische Universit\"at Darmstadt and Fraunhofer IGD.
 
+This work was sponsored by the Project ``Long-Term Activity Recognition with Wearable Sensors'' (LA 2758/1-1) from the German Research Foundation (DFG).
+
 \bibliographystyle{splncs03}
 \bibliography{references}
 
