added Springer reference to the publication

--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -56,6 +56,13 @@ Activity recognition with a wearable accelerometer is a common investigated rese
 
 \section{Introduction}
 
+\begin{picture}(0,0)
+	\put(-70,-290){
+		The final publication is available at: \url{http://link.springer.com/chapter/10.1007/978-3-642-34898-3_2}
+	}
+\end{picture}
+
+
 Persons affected from physical and mental restrictions and their care givers can profit significantly from unobtrusive activity monitoring solutions. For example, formal care givers could equip a person with a wearable activity monitoring system that evaluates the course of a disease or the influence of an adapted medication \cite{Muhlsteff2004a}. This scenario is especially relevant for people suffering from dementia who have limitations in organizing their daily activities. A simple wearable activity monitoring solution could analyze activities performed in daily life, such as drinking, eating and sleeping habits. 
 
 Sensing a person's activity is an active research topic with a raising interest due to the advancement in mobile phone technology. These devices include multiple sensors and therefore enable the recognition of daily activities \cite{brezmes2009activity}. Current wearable activity recognition systems are able to unobtrusively capture and recognize a person's activities throughout the whole day. These systems often rely on inertial sensor data that are captured by wearable sensors embedded in a mobile device \cite{brezmes2009activity} or attached to the body \cite{Ravi2005}. Usually, single sensor modalities are used or duplicated to detect the activities. However, it is a great challenge to identify many activities just by using a single modality like the accelerometer.
